// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DepositDataRegistry deposit data manager update succeeds 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 63707,
}
`;

exports[`DepositDataRegistry deposit data root update success 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 64505,
}
`;

exports[`DepositDataRegistry migrate succeeds 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 142334,
}
`;

exports[`DepositDataRegistry multiple validators succeeds 1`] = `
Object {
  "calldataByteLength": 3364,
  "gasUsed": 687523,
}
`;

exports[`DepositDataRegistry single validator succeeds 1`] = `
Object {
  "calldataByteLength": 1156,
  "gasUsed": 333583,
}
`;
